--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "The Hello World tutorial for NextJS",
   "main": "index.js",
   "scripts": {
-    "dev": "next"
+    "dev": "node server.js",
+    "build": "next build",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,8 @@
   },
   "homepage": "https://github.com/rlambrecht/hello-next#readme",
   "dependencies": {
+    "express": "^4.16.3",
+    "isomorphic-unfetch": "^2.0.0",
     "next": "^5.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
